# cs-email

./: .cursorignore  .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
.cursor/rules/: langgraph.mdc  project-standards.mdc  python.mdc
cs_email/: __init__.py  graph.py  nodes.py  server.py  state.py
scripts/: manual_integration.py  stream_demo.py  test_multiturn.py  test_sse_client.py
tests/: __init__.py  test_graph.py  test_stream.py
